# chem_mat_data

./: .gitignore  CLAUDE.md  HISTORY.rst  mkdocs.yml  pyproject.toml
.claude/commands/: changelog.md  debug.md  documentation.md  feature.md
chem_mat_data/: __init__.py  cache.py  data.py  dataset.py  main.py  manage.py  metadata.yml
chem_mat_data/agent/: README.md  opencode_client.py
chem_mat_data/scripts/: create_graph_datasets__zinc250k.py  test_xyz.ipynb
docs/: api_streaming_datasets.md  cli_cache.md
docs/architecture_decisions/: 004_streaming_datasets.md  005_automated_processing_agent.md
tests/: test_dataset.py  test_dataset_benchmark.py  test_docs.py  test_main.py  test_web.py  test_xyz_dataset.py
